--- a/login.html
+++ b/login.html
@@ -7,45 +7,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <title>eMercado - Todo lo que busques está aquí</title>
-
+ 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="css/loginstyle.css" rel="stylesheet">
   <style>
-    html, body{
-      height: 100%;
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
 
-    body {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-align: center;
-      align-items: center;
-      padding-top: 40px;
-      padding-bottom: 40px;
-      background-color: #f5f5f5;
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
     }
-
-    .signin {
-      width: 100%;
-      max-width: 330px;
-      padding: 15px;
-      margin: auto;
-    }
-  </style>
+    </style>
+  <link href="css/styles.css" rel="stylesheet">
+  
 </head>
 
 <body class="text-center">
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 16/08/2020) -> Punto 3 y 4.</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+  <form class="form-signin">
+    <h3 class="mb-3 font-weigth-bold"> Iniciar sesión</h3>
+    <label for="inputEmail" class="sr-only"> Email:</label>
+    <input type="email" id="inputEmail" class="form-Control" placeholder="Email" required autofocus>
+    <label for="inputEmail" class="sr-only"> Contraseña:</label>
+    <input type="password" id="inputPassword" class="form-Control" placeholder="Password" required autofocus>
+    
+    <div class="checkbox mb-3">
+      <label>
+        <hr>
+        <input type="checkbox" value="remember-me"> Recuerdame
+      </label>
     </div>
-  </div>
+    <button class="btn" type="submit" value="submit">Iniciar sesión </button>
+ </form>
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
