--- a/products.html
+++ b/products.html
@@ -16,30 +16,39 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <!-- Pefil dropdown-->
+        <nav class="navbar-nav" id="navbar-nav">
+          <div class="usernav">
+            <li class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle" id="usuario" data-toggle="dropdown"></a>
+            <div class="dropdown-menu" aria-labelledby="navDropDownLink">
+              <a class="dropdown-item" id="close" href="index.html">Cerrar Sesión</a>
+          </div>
+        </nav>
       </div>
     </nav>
     <main role="main" class="pb-5">
       <div class="text-center p-4">
           <h2>Productos</h2>
-          <p class="lead">Verás aquí todas los productos del sitio.</p>
+          <p class="lead">Verás aquí todos los productos del sitio.</p>
       </div>
       <div class="container">
           <div class="row">
               <div class="col text-right">
                   <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
                       <label class="btn btn-light active" id="sortAsc" >
-                          <input type="radio" name="options" autocomplete="off" checked>A-Z
+                          <input type="radio" name="options" autocomplete="off" checked><i class="fas fa-sort-amount-up mr-1"></i>$
                       </label>
                       <label class="btn btn-light" id="sortDesc" >
-                          <input type="radio" name="options" autocomplete="off">Z-A
+                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>$
                       </label>
-                      <label class="btn btn-light" id="sortByCount" >
-                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
+                      <label class="btn btn-light" id="sortByRelev" >
+                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
                       </label>
                   </div>
               </div>
@@ -49,7 +58,7 @@
               <div class="col-md-6 col-sm-12 mb-1 container">
                 <div class="row container p-0 m-0">
                   <div class="col">
-                    <p class="font-weight-normal text-right my-2">Cant.</p>
+                    <p class="font-weight-normal text-right my-2">$</p>
                   </div>
                   <div class="col">
                     <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
@@ -63,9 +72,11 @@
                       <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
                     </div>
                   </div>
-                </div>
+                </div> 
               </div>
-          </div>
+            </div>
+    
+          <!-- innerHTM -->
           <div class="row">
               <div class="list-group" id="cat-list-container">
               </div>
