--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
@@ -21,14 +22,16 @@
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+
         <!-- Pefil dropdown-->
         <nav class="navbar-nav" id="navbar-nav">
         <div class="usernav">
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="usuario" data-toggle="dropdown"></a>
           <div class="dropdown-menu" aria-labelledby="navDropDownLink">
-            <a class="dropdown-item" id="close" href="index.html">Cerrar Sesión</a>
+            <a class="dropdown-item" id="perfil" href="my-profile.html">Mi Perfil</a>
+            <a class="dropdown-item" id="carrito" href="cart.html">Mi carrito</a>
+            <a class="dropdown-item" id="close" onClick="clearStorageSesion()">Cerrar Sesión</a>
         </div>
       </nav>
     </nav>
