--- a/my-profile.html
+++ b/my-profile.html
@@ -36,12 +36,23 @@
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+      
+      <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-    </div>
+      
+      <!-- Pefil dropdown-->
+      <nav class="navbar-nav" id="navbar-nav">
+      <div class="usernav">
+        <li class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle" id="usuario" data-toggle="dropdown"></a>
+        <div class="dropdown-menu" aria-labelledby="navDropDownLink">
+          <a class="dropdown-item" id="perfil" href="my-profile.html">Mi Perfil</a>
+          <a class="dropdown-item" id="carrito" href="cart.html">Mi carrito</a>
+          <a class="dropdown-item" id="close" onClick="clearStorageSesion()">Cerrar Sesión</a>
+      </div>
+    </nav>
   </nav>
   <div class="container p-5">
     <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
