--- a/products.html
+++ b/products.html
@@ -16,19 +16,24 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
+        
         <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        
         <!-- Pefil dropdown-->
         <nav class="navbar-nav" id="navbar-nav">
-          <div class="usernav">
-            <li class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" id="usuario" data-toggle="dropdown"></a>
-            <div class="dropdown-menu" aria-labelledby="navDropDownLink">
-              <a class="dropdown-item" id="close" href="index.html">Cerrar Sesión</a>
-          </div>
+        <div class="usernav">
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="usuario" data-toggle="dropdown"></a>
+          <div class="dropdown-menu" aria-labelledby="navDropDownLink">
+            <a class="dropdown-item" id="perfil" href="my-profile.html">Mi Perfil</a>
+            <a class="dropdown-item" id="carrito" href="cart.html">Mi carrito</a>
+            <a class="dropdown-item" id="close" onClick="clearStorageSesion()">Cerrar Sesión</a>
+        </div>
+      </nav>
+    </nav>
         </nav>
       </div>
     </nav>
@@ -54,7 +59,8 @@
               </div>
           </div>
           <div class="row justify-content-end">
-            <div class="col-md-6"></div>
+            <div class="col-md-6">
+            </div>
               <div class="col-md-6 col-sm-12 mb-1 container">
                 <div class="row container p-0 m-0">
                   <div class="col">
