--- a/home.html
+++ b/home.html
@@ -55,6 +55,7 @@
           <h1></h1>
         </div>
       </section>
+      <!--categorias-->
       <div class="album py-5 bg-light">
         <div class="container">
           <div class="row">
