--- a/sell.html
+++ b/sell.html
@@ -159,7 +159,7 @@
                   <label class="custom-control-label" for="standardradio">Estándar (3%)</label>
                 </div>
                 <div class="row">
-                  <button type="button" class="m-1 btn btn-link" data-toggle="modal" data-target="#contidionsModal">Ver condiciones</button>
+                  <button type="button" class="m-1 btn" data-toggle="modal" data-target="#contidionsModal">Ver condiciones</button>
                 </div>
               </div>
               <hr class="mb-4">
@@ -241,6 +241,7 @@
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/dropzone.js"></script>
       <script src="js/init.js"></script>
+      <script src="js/login.js"></script>
       <script src="js/sell.js"></script>
     </body>
 </html>
